docs(java): restructure and deduplicate the Java interview guide
- organize Java interview content into consistent topic-based sections
- improve the main Java README with clear learning and interview routes
- merge duplicate and near-duplicate questions into canonical answers
- replace repeated answers with relative links to canonical topics
- separate theory, basic, advanced, and scenario-based questions
- review Java code examples for correctness and readability
- expand incomplete answers with practical examples and interview summaries
- add repository checks for broken links, empty files, and duplicate questions
- preserve all unique and useful existing content